<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_MergeMode" Id="{57d55088-9666-061f-0842-13c5b7a7141d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MergeMode :
(
	BlockedWait := 0, // Don't stop at MergeWait
	DontStopKeepGoing := 1, //CombinedSectorClear
	ChaseTail := 2, //UpstreamClrDnstreamNot
	ComeOutAhead := 3 //DnstreamClrUpstrmNot
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>